<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AIRSOFT</string>
    <string name="btn_chat">Bate Papo</string>
    <string name="btn_missions">Missões</string>
    <string name="btn_new_mission">Nova Missão</string>
    <string name="btn_old_mission">Missões Anteriores</string>
    <string name="btn_settings">Configurações</string>
    <string name="btn_gallery">Galeria de Fotos</string>
    <string name="title_activity_bate_papo">Bate Papo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="messagemDesenvolvimento">Ambiente em desenvolvimento!</string>

</resources>
