<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tab_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#55000000"
            android:text="@string/btn_chat"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/tab_missions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9C9C9C"
            android:text="@string/btn_missions"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55888888" >

        <!-- Tab: Bate-Papo -->

        <LinearLayout
            android:id="@+id/tab_frame_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <!-- Conteúdo da aba Bate-Papo aqui -->

            <include layout="@layout/lista_contato" />

            <include layout="@layout/contato" />
        </LinearLayout>

        <!-- Tab: Missão -->

        <LinearLayout
            android:id="@+id/tab_frame_missions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- Conteúdo da aba Missão aqui -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <Button
                    android:id="@+id/button01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawableTop="@mipmap/ic_work"
                    android:lines="4"
                    android:onClick="clicarNovaMissao"
                    android:paddingTop="25dp"
                    android:text="@string/btn_new_mission"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawableTop="@mipmap/ic_work_check"
                    android:lines="4"
                    android:onClick="clicarMissaoAnterior"
                    android:paddingTop="25dp"
                    android:singleLine="false"
                    android:text="@string/btn_old_mission"
                    android:textColor="#FFFFFF" />
                <!-- android:forceHasOverlappingRendering="false" -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <Button
                    android:id="@+id/button03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawableTop="@mipmap/ic_settings"
                    android:lines="4"
                    android:onClick="clicarConfiguracao"
                    android:paddingTop="25dp"
                    android:text="@string/btn_settings"
                    android:textColor="#FFFFFF" />
                <!-- android:elegantTextHeight="true" -->

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawableTop="@mipmap/ic_view_quilt"
                    android:lines="4"
                    android:onClick="clicarGaleriaFotos"
                    android:paddingTop="25dp"
                    android:text="@string/btn_gallery"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>